--- a/app/templates/tarea.html
+++ b/app/templates/tarea.html
@@ -3,4 +3,5 @@
     <td>{%NOMBRE%}</td>
     <td>{%DESCRIPCION%}</td>
     <td>{%FECHA%}</td>
+    <td><a href="/tarea?id={%ID%}"><i class="far fa-eye"></i></a></td>
 </tr>
